--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -1,67 +1,126 @@
+@import url(https://fonts.google.com/share?selection.family=Roboto:ital,wght@0,100..900;1,100..900);
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html,
 body{
-    height: 100%;
-    margin: 0;
-    font-size: 16px;
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.8em;
-    color: #666;
-
+    line-height: 1.4;
+    font-weight: 300; 
+    font-family: "Roboto", sans-serif;  
 }
 
-.pimg1{
-    background-image: url(images/image1.png);
-    min-height: 100%;
-}
-
-.pimg2{
-    background-image: url(images/image2.png);
-    min-height: 400px;
-}
-
-.pimg3{
-    background-image: url(images/image3.png);
-    min-height: 400px;
-}
-
-.pimg1, 
-.pimg2, 
-.pimg3{
-    position: relative;
+.hero_section{
+    background-image: url(images/developer.png) ;
+    min-height: 100vh;
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    
 }
 
-.ptext{
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    font-size: 27px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
+.text_container{
+    color: antiquewhite;
+    max-width: 900px;
+    margin: 0 auto;
+    padding-top: 64px;
+    padding-left: 16px;
+
 
 }
 
-.textBg{
-    background: #313534;
-    color: #000;
+.lg_text{
+    font-size: 72px;
+    font-weight: 400;
+
+}
+
+.black_box{
+    background-color: #000;
     padding: 20px;
 }
 
-.section {
-    padding:50px 80px;
+.black_box h2{
+    font-size: 72px;
+    color: white;
     text-align: center;
+    font-weight:300;
+    
 
 }
 
-.section-light{
-    background-color: #f4f4f4;
-    color: #ddd;
-
+.black_box h2 span{
+    font-weight: 400;
+    font-size: 96px;
 
 }
+
+.work{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
+    gap: 20px;
+    max-width: 1100px;
+    margin: 50px auto;
+
+}
+
+.grid_item{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ 
+.card{
+    max-width: 320px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.2);
+    transition: 0.2s ease-in-out;
+    
+}
+
+.card:hover{
+    transform: scale(1.04);
+    transition: 0.2s ease-in-out;
+    box-shadow: 3px 5px 5px rgba(1, 1, 1, 0.3);
+}
+
+.card_content{
+    padding: 20px;
+}
+.card_content h3{
+    margin-bottom: 10px;
+
+}
+
+.bottom_section{
+    display: flex;
+}
+
+.contact{
+    background-color:#515603 ; 
+}
+
+.about{
+    background-color: #722300;
+}
+
+.contact,.about{
+    min-height: 300px;
+    padding: 32px;
+    color: white;
+
+}
+
+.contact p,
+.about p {
+    margin-bottom: 20px;
+}
+    
+
+
+
+
